Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-03-08 Kimmo
 PATCH: [ 1664689 ] French translation (update2)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc
 Remove two unused functions, improve comments
  Src: DirActions.cpp
 BUG: [ 1670991 ] File panes lost focus after delete confirmation dialog
  Src: DirActions.cpp

2007-03-07 Kimmo
 PATCH: [ 1675087 ] New copy confirmation dialog
  Src: DirActions.cpp FileActionScript.h Merge.dsp Merge.rc resource.h
  Src new files: ConfirmFolderCopyDlg.cpp ConfirmFolderCopyDlg.h
  Src/Languages/*: Merge*.rc

2007-03-07 Takashi
 PATCH: [ 1675211 ] Fix crash when hiding parent folder item on folder view
  Src/DirView.cpp

2007-03-06 Kimmo
 PATCH: [ 1673908 ] Update of Swedish translation for "View margins"
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2007-03-04 Kimmo
 PATCH: [ 1673082 ] Polish translation for WM CVS
  Submitted by dr_prozac
   Src/Languages/Polish: MergePolish.rc

2007-03-04 Tim
 BUG: [ 1668996 ] Two "Copy Right" buttons in Russian GUI.
  Src/Languages/Russian: MergeRussian.rc

2007-03-04 Kimmo
 PATCH: [ 1664689 ] French translation (update)
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc

2007-02-27 WinMerge beta release 2.7.2 (revision 4137)

2007-02-27 Kimmo
 Bump ShellExtension version to 1.11
  ShellExtension: ShellExtension.rc

2007-02-26 Kimmo
 PATCH: [ 1664689 ] French translation
  Submitted by Jean-F Jolin
  Src/Languages/French: MergeFrench.rc

2007-02-25 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2007-02-24 Tim
 PATCH: [ 1667564 ] Various Updates in German Translation
  Src/Languages/German: MergeGerman.rc

2007-02-23 Kimmo
 Cleanup WMGotoDlg constructor
  Src: WMGotoDlg.cpp
 CleanUp VSS dialog class
  Src: VssPrompt.cpp

2007-02-22 Kimmo
 BUG: [ 1664731 ] Margin and line numbers not separated
  Src/editlib: ccrystaltextview.cpp